# ShortestPathServer

./: CMakeLists.txt  FileCacheManager.cpp  Interfaces.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySearchable.cpp  MySerialServer.cpp  MySerialServer.h  README.md  Solvers.cpp  main.cpp  myTestClientHandler.cpp  myTestClientHandler.h  serverside.h
Searcher Results/: AStar results.txt  BFS results.txt  BestFS results.txt  DFS result.txt  Searchers Result Summary.xlsx  matrices.txt
